--- a/source/app.specs/app.specs.csproj
+++ b/source/app.specs/app.specs.csproj
@@ -132,6 +132,7 @@
     <Compile Include="GreedyConstructorSelectionSpecs.cs" />
     <Compile Include="login_specs.cs" />
     <Compile Include="LogSpecs.cs" />
+    <Compile Include="make_sure_the_user_is_authenticated_specs.cs" />
     <Compile Include="MessageGeneratorSpecs.cs" />
     <Compile Include="ObjectExtensionsSpecs.cs" />
     <Compile Include="RequestCommandSpecs.cs" />
