--- a/source/app.specs/app.specs.csproj
+++ b/source/app.specs/app.specs.csproj
@@ -131,6 +131,7 @@
     <Compile Include="FrontControllerSpecs.cs" />
     <Compile Include="GreedyConstructorSelectionSpecs.cs" />
     <Compile Include="login_specs.cs" />
+    <Compile Include="LogoutSpecs.cs" />
     <Compile Include="LogSpecs.cs" />
     <Compile Include="make_sure_the_user_id_in_the_url_matches_the_user_id_on_the_principal_specs.cs" />
     <Compile Include="make_sure_the_user_is_authenticated_specs.cs" />
