--- a/source/app/app.csproj
+++ b/source/app/app.csproj
@@ -139,6 +139,7 @@
     <Compile Include="web\application\catalogbrowsing\queries\GetTheDepartmentsInADepartment.cs" />
     <Compile Include="web\application\catalogbrowsing\queries\GetTheMainDepartments.cs" />
     <Compile Include="web\application\catalogbrowsing\reports\Login.cs" />
+    <Compile Include="web\application\catalogbrowsing\reports\Logout.cs" />
     <Compile Include="web\application\catalogbrowsing\reports\ViewTheDepartmentsInADepartment.cs" />
     <Compile Include="web\application\catalogbrowsing\reports\ViewTheMainDepartments.cs" />
     <Compile Include="web\application\catalogbrowsing\reports\ViewTheProductsInADepartment.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="web\core\aspnet\IFindViewsToDisplayReportModels.cs" />
     <Compile Include="web\core\IRedirect.cs" />
     <Compile Include="web\core\IRegisterRoutes.cs" />
+    <Compile Include="web\core\Logout_Behaviour.cs" />
     <Compile Include="web\core\make_sure_the_user_id_in_the_url_matches_the_user_id_in_the_principal.cs" />
     <Compile Include="web\core\PrincipalFactory.cs" />
     <Compile Include="web\core\PrincipalSwitch.cs" />
